--- a/minify.yml
+++ b/minify.yml
@@ -1,3 +1,16 @@
-- name: Auto Minify
-  uses: nizarmah/auto-minify@v2.0
+steps:
+  # Checks-out your repository under $GITHUB_WORKSPACE, so auto-minify job can access it
+  - uses: actions/checkout@v2
 
+  - name: Auto Minify
+    uses: nizarmah/auto-minify@master
+    with: 
+      directory: assets
+
+  # Auto commits minified files to the repository
+  # Ignore it if you don't want to commit the files to the repository 
+  - name: Auto committing minified files
+    uses: stefanzweifel/git-auto-commit-action@v3.0.0
+    with:
+      commit_message: "Github Action: Auto Minified JS and CSS files"
+      branch: ${{ github.ref }}
