updates to yml file

--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ inputs:
     description: "Directory that contains the minified files. Defaults to same directory"
     required: false
     default: ""
-  maxdepth: "5"
+  maxdepth: 5
     description: "Descend at most levels (a non-negative integer) levels of directories below the starting-points."
     required: false
     default: ""
@@ -15,3 +15,11 @@ inputs:
     description: "Specifies which of the supported packages minifies JS files."
     required: false
     default: "babel"
+    
+runs:
+  using: "docker"
+  image: "Dockerfile"
+
+branding:
+  icon: "archive"
+  color: "purple"
