--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+      with: 
+        directory: 'assets'
+        output: 'assets'
 
     - name: Auto Minify
       uses: nizarmah/auto-minify@v1.3
