corrections to yml file for actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,23 @@
 name: Auto Minify JS and CSS Files
 
+inputs:
+  directory: "assets"
+    description: "Directory that contains the files you want to minify. Defaults to current directory (.)"
+    required: false
+    default: "."
+  output: "assets"
+    description: "Directory that contains the minified files. Defaults to same directory"
+    required: false
+    default: ""
+  maxdepth:
+    description: "Descend at most levels (a non-negative integer) levels of directories below the starting-points."
+    required: false
+    default: ""
+  js_engine:
+    description: "Specifies which of the supported packages minifies JS files."
+    required: false
+    default: "babel"
+
 on:
   push:
     branches: [ master ]
@@ -11,9 +29,6 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-      with: 
-        directory: 'assets'
-        output: 'assets'
 
     - name: Auto Minify
       uses: nizarmah/auto-minify@v1.3
