yml file fixes for input directory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Auto Minify
         uses: nizarmah/auto-minify@v1.3
         with:
-          directory: 'assets'
+          directory: '../../assets'
 
       - name: Auto committing minified files
         uses: stefanzweifel/git-auto-commit-action@v3.0.0
