--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: nizarmah/auto-minify@v1.3
         with:
           directory: '../../assets'
-          output: '../../assets'
+          output: '../../assets/minified'
 
       - name: Auto committing minified files
         uses: stefanzweifel/git-auto-commit-action@v3.0.0
