--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: [ master ]
     paths: 
-      - 'assets'
+      - 'assets/**/*.js'
+      - 'assets/**/*.css'
 
 jobs:
   build:
