Run minify workflow on pull requests and manually

--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -1,6 +1,8 @@
 name: Auto Minify JS and CSS Files
 
 on:
+  workflow_dispatch:
+  pull_request:
   push:
     branches: [ master ]
     paths: 
@@ -13,9 +15,11 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
-
+        with:
+          ref: ${{ github.head_ref }}
+  
       - name: Auto Minify
-        uses: nizarmah/auto-minify@v2.0
+        uses: nizarmah/auto-minify@v2.1
         with:
           directory: 'assets'
 
@@ -23,4 +27,3 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Generate minified JS and CSS files"
-          branch: ${{ github.ref }}
