--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,5 +32,6 @@ jobs:
 
       - name: Run PHP Parallel Lint on PHP ${{ matrix.php-versions }}
         run: |
+            rm -rf vendor
             curl -o parallel-lint.phar -L -C - https://github.com/php-parallel-lint/PHP-Parallel-Lint/releases/latest/download/parallel-lint.phar
             php parallel-lint.phar . --exclude vendor --checkstyle --show-deprecated | cs2pr
