Replace  DOMPDF 1.1.1 with the patched version from the branch 'whitespace'
https://github.com/dompdf/dompdf/tree/whitespace

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
+	"repositories": [
+		{
+			"url": "https://github.com/dompdf/dompdf.git",
+			"type": "git"
+		}
+	],
     "require": {
-        "dompdf/dompdf": "^1.1",
+        "dompdf/dompdf": "dev-whitespace",
         "symfony/polyfill-mbstring": "1.20",
         "symfony/polyfill-iconv": "1.20.0"
     }
