--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,6 @@
 {
-	"repositories": [
-		{
-			"url": "https://github.com/dompdf/dompdf.git",
-			"type": "git"
-		}
-	],
     "require": {
-        "dompdf/dompdf": "dev-whitespace",
+        "dompdf/dompdf": "^1.1",
         "symfony/polyfill-mbstring": "1.20",
         "symfony/polyfill-iconv": "1.20.0"
     }
