--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
     "require": {
         "dompdf/dompdf": "^2.0",
-        "symfony/polyfill-mbstring": "1.20",
-        "symfony/polyfill-iconv": "1.20.0"
+        "symfony/polyfill-mbstring": "1.20"
     },
     "config": {
         "platform-check": false
