--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "dompdf/dompdf": "^2.0",
-        "symfony/polyfill-mbstring": "1.20"
+        "symfony/polyfill-mbstring": "1.20",
+        "symfony/polyfill-iconv": "1.20.0"
     },
     "config": {
         "platform-check": false
