--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: ['ubuntu-18.04']
+        operating-system: ['ubuntu-latest']
         php-versions: ['7.1', '7.2', '7.3', '7.4', '8.0', '8.1']
    
     steps:
