--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,11 @@
     },
     "config": {
         "platform-check": false
-    }
+    },
+	"autoload": {
+		"psr-4": {
+			"WPO\\WC\\UBL\\": "ubl/"
+		},
+        "classmap": ["ubl/"]
+	}
 }
