--- a/.distignore
+++ b/.distignore
@@ -1,20 +1,11 @@
-# root directories
-.wordpress-org/*
-.git/*
-.github/*
-node_modules/*
-
-# sub directories
-/**/.*/
-/*/.git/
-/**/.git/
-/*/.github/
-/**/.github/
-
-# root files
-.distignore
-.gitignore
-.gitattributes
-.gitmodules
-composer.json
-composer.lock
+*.wordpress-org
+*node_modules
+*.git*
+*.DS_Store
+*.gitignore
+*.gitkeep
+*.gitmodules
+*.distignore
+*.gitattributes
+*composer.json
+*composer.lock
