--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
 			"exclude_from_prefix": {
 				"packages": [
 					"symfony/polyfill-mbstring",
-					"symfony/polyfill-iconv"
+					"symfony/polyfill-iconv",
+					"masterminds/html5"
 				],
 				"namespaces": [
 				],
