Strauss instructions file

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
 			"exclude_from_copy": {
 				"packages": [],
 				"namespaces": [],
-				"file_patterns": []
+				"file_patterns": [
+					"/^psr.*$/"
+				]
 			},
 			"exclude_from_prefix": {
 				"packages": [
