--- a/.distignore
+++ b/.distignore
@@ -17,3 +17,4 @@ templates/.distignore
 templates/LICENSE
 templates/README.md
 templates/wpo-ips-default-templates.php
+templates/GitHubUpdater.php
