--- a/.distignore
+++ b/.distignore
@@ -12,3 +12,8 @@
 *composer.lock
 *strauss.phar
 *strauss.md
+templates/.github
+templates/.distignore
+templates/LICENSE
+templates/README.md
+templates/wpo-ips-default-templates.php
